--- a/website/index.html
+++ b/website/index.html
@@ -138,7 +138,7 @@
               <div class="square sprite-pepole waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">10.5</h2>
               <h6 class="waypoint">millions people</h6>
-              <p class="text-center">in the U.S. annually booking flights, hotels and rental cars through a travel website scaled by us.</p>
+              <p class="text-center">worldwide annually booking flights, hotels and rental cars through a travel website scaled by us.</p>
             </div>
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-visit waypoint"></div>
@@ -148,7 +148,7 @@
               </div>
             <div class="col-sm-6 col-md-3">
               <div class="square sprite-startup waypoint"></div>
-              <h2 class="text-center c-g waypoint" style="font-size: 3rem">267</h2>
+              <h2 class="text-center c-g waypoint" style="font-size: 3rem">+76</h2>
               <h6 class="waypoint">of startups</h6>
               <p class="text-center">in the USA, Europe and Asia benefiting from our scaling</p>
               </div>
@@ -262,7 +262,7 @@
           <div class="row">
             <div class="col-sm-4">
               <img src="img/lars.png" alt="" class="img-responsive m-auto waypoint" />
-              <h6 class="c-g waypoint">job title</h6>
+              <h6 class="c-g waypoint">Founder</h6>
               <h3 class="title waypoint">LARS JANKOWFSKY</h3>
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
               <div class="clearfix"></div>
@@ -271,7 +271,7 @@
             </div>
             <div class="col-sm-4">
               <img src="img/joseph.png" alt="" class="img-responsive m-auto waypoint" />
-              <h6 class="c-g waypoint">job title</h6>
+              <h6 class="c-g waypoint">Managing Partner Singapore</h6>
               <h3 class="title waypoint">JOSEPH ZIEGLER</h3>
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
               <div class="clearfix"></div>
@@ -279,14 +279,23 @@
               <p class="text-center waypoint">In 1995 he worked at Netscape developing some of the first e-commerce applications during the early days of the Internet. <a href="">read more ....</a></p>
             </div>
             <div class="col-sm-4">
+              <img src="img/team/vincent-2.png" alt="" class="img-responsive m-auto waypoint" style="border-radius: 50%"/>
+              <h6 class="c-g waypoint">chief of execution</h6>
+              <h3 class="title waypoint">Delonghi Nguyen</h3>
+              <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
+              <div class="clearfix"></div>
+              <p class="text-center waypoint">After years of expirence in makeing coffee, Delonghi was ready to step up to the big league and become the best coffee machine ever.</p>
+              <p class="text-center waypoint">As long as Vincent fill my tank, and empty the ground, i'm happy to work all day. <a href="">read more ....</a></p>
+            </div>
+            <!-- <div class="col-sm-4">
               <img src="img/vincent.png" alt="" class="img-responsive m-auto waypoint" />
-              <h6 class="c-g waypoint">job title</h6>
+              <h6 class="c-g waypoint">Managing Director</h6>
               <h3 class="title waypoint">VINCENT VO</h3>
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
               <div class="clearfix"></div>
               <p class="text-center waypoint">Vincent is a lifetime entrepreneur in the media and advertising world of Vietnam.</p>
               <p class="text-center waypoint">Vincent helped to launch FV hospital in Ho Chi Minh and built such brands at Ogilvy Action such as Blackberry, Acer <a href="">read more ....</a></p>
-            </div>
+            </div> -->
           </div>
           <br />
           <br />
@@ -313,10 +322,11 @@
                 <h4 class="title waypoint">Vinh Do</h4>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-4.jpg" alt="" class="img-responsive m-auto waypoint" />
-                <h6 class="c-g waypoint">Senior Software Engineer</h6>
-                <h4 class="title waypoint">Dung Nguyen</h4>
+                <img src="img/team/all-14.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <h6 class="c-g waypoint">Managing Director</h6>
+                <h4 class="title waypoint">VINCENT VO</h4>
               </div>
+              
               <!-- <div class="col-sm-3">
                 <img src="img/team/all.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Recruiter</h6>
@@ -324,6 +334,11 @@
               </div> -->
             </div>
             <div class="row">
+              <div class="col-sm-3">
+                <img src="img/team/all-4.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <h6 class="c-g waypoint">Senior Software Engineer</h6>
+                <h4 class="title waypoint">Dung Nguyen</h4>
+              </div>
               <div class="col-sm-3">
                 <img src="img/team/all-5.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Software Engineer</h6>
@@ -335,21 +350,17 @@
                 <h4 class="title waypoint">Anh Nguyen</h4>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-7.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <img src="img/team/all-12.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Software Engineer</h6>
                 <h4 class="title waypoint">Hau Tran</h4>
               </div>
+              
+            </div>
+            <div class="row">
               <div class="col-sm-3">
                 <img src="img/team/all-2.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Software Engineer</h6>
                 <h4 class="title waypoint">Long Nguyen</h4>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-3 hiiden-xs-down">
-<!--                 <img src="img/team/all-8.jpg" alt="" class="img-responsive m-auto waypoint" />
-                <h6 class="c-g waypoint">Chief Accountant/ HR Manager</h6>
-                <h4 class="title waypoint">Hanh Pham</h4> -->
               </div>
               <div class="col-sm-3">
                 <img src="img/team/all-6.jpg" alt="" class="img-responsive m-auto waypoint" />
@@ -357,7 +368,7 @@
                 <h4 class="title waypoint">Tuan Ha</h4>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-8.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <img src="img/team/all-11.jpg" alt="" class="img-responsive m-auto waypoint" />
                 <h6 class="c-g waypoint">Chief Accountant/ HR Manager</h6>
                 <h4 class="title waypoint">Hanh Pham</h4>
               </div>
