--- a/website/index.html
+++ b/website/index.html
@@ -403,14 +403,14 @@
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
               <div class="clearfix"></div>
               <br />
-              <p><b class="c-g waypoint">Join us</b> today to grow your career and live your life with happiness. </p>
+              <p><b class="c-g waypoint">Join us</b> today to grow your career!</p>
               <div class="row">
                 <div class="team-wrapper">
                   <img src="img/team1.png" alt="" class="img-team waypoint" id="team-1" />
-                  <img src="img/team2.png" alt="" class="img-team waypoint" id="team-2" />
+                  <img src="img/team8.png" alt="" class="img-team waypoint" id="team-2" />
                   <img src="img/team3.png" alt="" class="img-team waypoint" id="team-3" />
                   <img src="img/team2.png" alt="" class="img-team waypoint" id="team-4" />
-                  <img src="img/team2.png" alt="" class="img-team waypoint" id="team-5" />
+                  <img src="img/team9.png" alt="" class="img-team waypoint" id="team-5" />
                   <img src="img/team4.png" alt="" class="img-team waypoint" id="team-6" />
                   <img src="img/team7.png" alt="" class="img-team waypoint" id="team-7" />
                   <img src="img/team5.png" alt="" class="img-team waypoint" id="team-8" />
@@ -422,11 +422,11 @@
               <div class="clearfix"></div>
               <br />
               <div class="container">
-                <p class="text-center waypoint">
+                <!-- <p class="text-center waypoint">
                   <b>Interesting in growing with us? </b><br />
                   visiting our office, <br />
                   Send us an E-mail or speak with our Ms. Pretty at xxx.xxx.xxxx
-                </p>
+                </p> -->
                 <div class="row" style="padding: 0 .5rem;">
                   <div class="jobs waypoint">
                     <h4 class="c-g" style="margin-bottom: 2rem;">Current Employment Opportunities</h4>  
@@ -434,25 +434,25 @@
                       <li class="job-title col-md-6 col-lg-3">
                         <h5>SENIOR PHP DEVELOPTER</h5>
                         <a class="" href="#php" role="tab" data-scroll="true" data-id="#job-detail">
-                          <small class="c-g">CLICK FOR MORE DETAILS >> </small>
+                          <small class="c-g">MORE DETAILS >> </small>
                         </a>
                       </li>
                       <li class="job-title col-md-6 col-lg-3">
                         <h5>FRONT-END DEVELOPER</h5>
                         <a class="" href="#front" role="tab" data-scroll="true" data-id="#job-detail">
-                          <small class="c-g">CLICK FOR MORE DETAILS >> </small>
+                          <small class="c-g">MORE DETAILS >> </small>
                         </a>
                       </li>
                       <li class="job-title col-md-6 col-lg-3">
                         <h5>RUBY ON RAILS DEVELOPER</h5>
                         <a class="" href="#ror" role="tab" data-scroll="true" data-id="#job-detail">
-                          <small class="c-g">CLICK FOR MORE DETAILS >> </small>
+                          <small class="c-g">MORE DETAILS >> </small>
                         </a>
                       </li>
                       <li class="job-title col-md-6 col-lg-3">
                         <h5>iOS DEVELOPER</h5>
                         <a class="" href="#ios" role="tab" data-scroll="true" data-id="#job-detail">
-                          <small class="c-g">CLICK FOR MORE DETAILS >> </small>
+                          <small class="c-g">MORE DETAILS >> </small>
                         </a>
                       </li>
                     </ul>
@@ -500,7 +500,7 @@
                 <li>GIT</li>
               </ul>
               <div class="text-center">
-                <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20SENIOR%20PHP%20DEVELOPTER" target="_top" class="btn btn-success">Click Here to Apply</a>
+                <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20SENIOR%20PHP%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
               </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="front">
@@ -526,7 +526,7 @@
               <li>Attention to details</li>
             </ul>
               <div class="text-center">
-                <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20FRONT%20END%20DEVELOPTER" target="_top" class="btn btn-success">Click Here to Apply</a>
+                <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20FRONT%20END%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
               </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="ror">
@@ -552,7 +552,7 @@
                 <li>Git</li>
               </ul>
               <div class="text-center">
-                <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20RUBY%20ON%20RAILS%20DEVELOPTER" target="_top" class="btn btn-success">Click Here to Apply</a>
+                <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20RUBY%20ON%20RAILS%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
               </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="ios">
@@ -575,7 +575,7 @@
                 <li>Open-minded and good at adapting to frequent changes.</li>
               </ul>
               <div class="text-center">
-                <a href="mailto:recruit@8bitrocker.com?Subject=Apply%20for%20IOS%20DEVELOPTER" target="_top" class="btn btn-success">Click Here to Apply</a>
+                <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20IOS%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
               </div>
             </div>
           </div>
@@ -594,12 +594,12 @@
           <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
           <div class="clearfix"></div>
           <br />
-          <p class="text-center waypoint">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque corporis, vitae sapiente. Sed deserunt, quo molestiae maiores asperiores quisquam qui autem officia vero maxime reiciendis nesciunt, eos ex ducimus eligendi.</p>
-          <p class="text-center waypoint">8Bit Rockstars Co., Ltd.
-            F12A- R22, Vincom Center,
-            72 Le Thanh Ton, P. Ben Nghe,
-            District 1, Ho Chi Minh City,
-            Vietnam</p>
+          <p class="text-center waypoint">8Bit Rockstars Co., Ltd. <br />
+            F12A- R22, Vincom Center, 72 Le Thanh Ton, P. Ben Nghe, <br />
+            District 1, Ho Chi Minh City, Vietnam <br />
+            info@8bitrockr.com <br />
+            +84 8668 19033 <br />
+            </p>
         </div>
       </div>
     </section>
