add google analytics

--- a/website/index.html
+++ b/website/index.html
@@ -664,7 +664,17 @@
     <script src="js/jquery.waypoints.min.js"></script>
     <!-- Custom javascript -->
     <script src="js/js.js"></script>
+
     <script type="text/javascript">
+    
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-69864743-1', 'auto');
+      ga('send', 'pageview');
+
       /*
       Enable the "Request Desktop Site" functions on mobile chrome (android and iOS) allow users to see desktop layouts on responsive sites.  Note that this is distinct from "opt out of mobile!" buttons built into your site: this is meant to work with the browser's native opt-in/opt-out functionality.  
 
