add more people

--- a/website/index.html
+++ b/website/index.html
@@ -412,7 +412,12 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-3 hidden-xs-down">
+              <div class="col-sm-3">
+                <img src="img/team/all-18.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Lead Developer</h6>
+                  <h4 class="title waypoint">Tri Tran</h4>
+                </div>
               </div>
               <div class="col-sm-3">
                 <img src="img/team/all-16.jpg" alt="" class="img-responsive m-auto waypoint" />
