--- a/website/index.html
+++ b/website/index.html
@@ -490,7 +490,7 @@
                     <h4 class="c-g" style="margin-bottom: 2rem;">Current Employment Opportunities</h4>  
                     <ul class="" role="tablist" id="jobs-options">
                       <li class="job-title col-md-6 col-lg-3">
-                        <h5>SENIOR PHP DEVELOPTER</h5>
+                        <h5>SENIOR PHP DEVELOPER</h5>
                         <a class="" href="#php" role="tab" data-scroll="true" data-id="#job-detail">
                           <small class="c-g">MORE DETAILS >> </small>
                         </a>
