sprite team images

--- a/website/index.html
+++ b/website/index.html
@@ -314,28 +314,40 @@
           <div id="members">
             <div class="row">
               <div class="col-sm-3">
-                <img src="img/team/all-14-1.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-14-1.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-11"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Managing Director</h6>
                   <h4 class="title waypoint">VINCENT VO</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-9.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-9.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-2"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Front End Lead</h6>
                   <h4 class="title waypoint">Itai Baruch</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-10.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-10.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-1"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Project Manager</h6>
                   <h4 class="title waypoint">Chi Nguyen</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-1-1.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-1-1.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-12"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Project Manager</h6>
                   <h4 class="title waypoint">Vinh Do</h4>
@@ -353,28 +365,41 @@
             </div>
             <div class="row">
               <div class="col-sm-3">
-                <img src="img/team/all-4.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-4.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-6"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Senior Software Engineer</h6>
                   <h4 class="title waypoint">Dung Nguyen</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-5.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-5.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-5"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Software Engineer</h6>
                   <h4 class="title waypoint">Trung Tran</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-3.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-3.jpg" alt="" class="img-responsive m-
+                auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-7"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Software Engineer</h6>
                   <h4 class="title waypoint">Anh Nguyen</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-12.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-12.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-4"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Software Engineer</h6>
                   <h4 class="title waypoint">Hau Tran</h4>
@@ -383,28 +408,40 @@
             </div>
             <div class="row">
               <div class="col-sm-3">
-                <img src="img/team/all-2.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-2.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-8"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Software Engineer</h6>
                   <h4 class="title waypoint">Long Nguyen</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-6-1.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-6-1.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-13"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Software Engineer</h6>
                   <h4 class="title waypoint">Tuan Ha</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-11.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-11.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-3"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Chief Accountant</h6>
                   <h4 class="title waypoint">Hanh Pham</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-15.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-15.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-15"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Senior Software Engineer</h6>
                   <h4 class="title waypoint">Kiet Mai</h4>
@@ -413,21 +450,30 @@
             </div>
             <div class="row">
               <div class="col-sm-3">
-                <img src="img/team/all-18.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-18.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-10"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Lead Developer</h6>
                   <h4 class="title waypoint">Tri Tran</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-16.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-16.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-9"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Lead Developer</h6>
                   <h4 class="title waypoint">Nghia Dinh</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <img src="img/team/all-17.jpg" alt="" class="img-responsive m-auto waypoint" />
+                <!-- <img src="img/team/all-17.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-15"></div>
+                </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Admin &amp; HR officer</h6>
                   <h4 class="title waypoint">Han Dang</h4>
