--- a/website/index.html
+++ b/website/index.html
@@ -38,12 +38,12 @@
     <style>
       @font-face {
           font-family: 'upheavtt';
-          src: url('fonts/upheavtt.eot');
-          src: url('fonts/upheavtt.eot') format('embedded-opentype'),
-               url('fonts/upheavtt.woff2') format('woff2'),
-               url('fonts/upheavtt.woff') format('woff'),
-               url('fonts/upheavtt.ttf') format('truetype'),
-               url('fonts/upheavtt.svg#upheavtt') format('svg');
+          src: url('css/fonts/upheavtt.eot');
+          src: url('css/fonts/upheavtt.eot') format('embedded-opentype'),
+               url('css/fonts/upheavtt.woff2') format('woff2'),
+               url('css/fonts/upheavtt.woff') format('woff'),
+               url('css/fonts/upheavtt.ttf') format('truetype'),
+               url('css/fonts/upheavtt.svg#upheavtt') format('svg');
       }
     </style>
 
