load min bootstrap css and js

--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,7 @@
     <meta content="8 Bit Rockstars is the nation's coolest agile tech firm, specializing in PHP, and one of the leaders in utilizing Elasticsearch. 8 Bit Rockstars is part of the global NFQ enterprise that began in 2000 in Germany and spans Europe, Vietnam, and Singapore." property="twitter:description" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.min.css">
 
     <!-- Custom styles -->
     <!-- <link rel="stylesheet" href="css/css.css"> -->
@@ -772,7 +772,7 @@
 
     <!-- jQuery first, then Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
+    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.min.js"></script>
     
     <script src="js/jquery.waypoints.min.js"></script>
     <!-- Custom javascript -->
