--- a/website/index.html
+++ b/website/index.html
@@ -730,8 +730,10 @@
           <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
           <div class="clearfix"></div>
           <br />
-          <p class="text-center waypoint">8Bit Rockstars Co., Ltd. <br />
-            F12A- R22, Vincom Center, 72 Le Thanh Ton, P. Ben Nghe, <br />
+          <p class="text-center waypoint">
+            8Bit Rockstars Co. Ltd. <br />
+            F12A- R22, Vincom Center, <br />
+            72 Le Thanh Ton, P. Ben Nghe, <br />
             District 1, Ho Chi Minh City, Vietnam <br />
             info@8bitrockr.com <br />
             +84 8668 19033 <br />
