--- a/website/index.html
+++ b/website/index.html
@@ -850,7 +850,7 @@
                                                                                      \$$$$$$  |                                               
                                                                                       \______/                                         
 
-      email me at xxx@8bitrockr.com;
+      email me at itai.baruch@8bitrockr.com;
       
       */
     </script>
