sprite all the pngs

--- a/website/index.html
+++ b/website/index.html
@@ -173,25 +173,25 @@
           </div> -->
           <div class="row">
             <div class="col-sm-6 col-md-3">
-              <div class="square sprite-pepole waypoint"></div>
+              <div class="square sprite-png sprite-pepole waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">10.5</h2>
               <h6 class="waypoint">millions people</h6>
               <p class="text-center">worldwide annually booking flights, hotels and rental cars through a travel website scaled by us.</p>
             </div>
             <div class="col-sm-6 col-md-3">
-              <div class="square sprite-visit waypoint"></div>
+              <div class="square sprite-png sprite-visit waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">398</h2>
               <h6 class="waypoint">thousands unique visitors</h6>
               <p class="text-center">every month in Germany visiting online shops scaled by NFQ.</p>
               </div>
             <div class="col-sm-6 col-md-3">
-              <div class="square sprite-startup waypoint"></div>
+              <div class="square sprite-png sprite-startup waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">+76</h2>
               <h6 class="waypoint">of startups</h6>
               <p class="text-center">in the USA, Europe and Asia benefiting from our scaling</p>
               </div>
             <div class="col-sm-6 col-md-3">
-              <div class="square sprite-first waypoint"></div>
+              <div class="square sprite-png sprite-first waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">1</h2>
               <h6 class="waypoint">8 Bit Rockstars</h6>
               <p class="text-center">Vietnam is among the first expansions of NFQ in Asia.</p>
@@ -221,11 +221,17 @@
               <br />
               <div class="container">
                 <div class="row">
-                  <div class="col-sm-6" id="open-source">
-                    <img src="img/whatWeDoPic1.png" class="what-we-do-pic waypoint" />
+                  <div class="col-sm-6">
+                    <!-- <img src="img/whatWeDoPic1.png" class="what-we-do-pic waypoint" /> -->
+                    <div id="open-source"> 
+                      <div class="sprite-png what-we-do-sprite open-source"></div>
+                    </div>
                   </div>
-                  <div class="col-sm-6" id="build-teams">
-                    <img src="img/whatWeDoPic2.png" class="what-we-do-pic waypoint" />
+                  <div class="col-sm-6">
+                    <!-- <img src="img/whatWeDoPic2.png" class="what-we-do-pic waypoint" /> -->
+                    <div id="build-teams">
+                      <div class="sprite-png what-we-do-sprite build-teams"></div>
+                    </div>
                   </div>
                 </div>
                 <div class="row">
@@ -274,7 +280,10 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-12">
-                    <img src="img/whatWeDoPic3.png" class="what-we-do-pic waypoint" style="margin-top: -1rem;" />
+                    <!-- <img src="img/whatWeDoPic3.png" class="what-we-do-pic waypoint" style="margin-top: -1rem;" /> -->
+                    <div id="best-work">
+                      <div class="sprite-png what-we-do-sprite best-work"></div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -299,7 +308,8 @@
           <h4 class="align-center heading c-g waypoint">executive board</h4>
           <div class="row">
             <div class="col-sm-6">
-              <img src="img/lars.png" alt="" class="img-responsive m-auto waypoint" />
+              <!-- <img src="img/lars.png" alt="" class="img-responsive m-auto waypoint" /> -->
+              <div class="team-png-sprite lars"></div>
               <h6 class="c-g waypoint">Founder</h6>
               <h3 class="title waypoint">LARS JANKOWFSKY</h3>
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
@@ -308,7 +318,8 @@
               <p class="text-center waypoint">He was the founding CTO of various successful companies, <a href="https://de.linkedin.com/in/larsjankowfsky" target="_blank">read more ....</a></p>
             </div>
             <div class="col-sm-6">
-              <img src="img/joseph.png" alt="" class="img-responsive m-auto waypoint" />
+              <!-- <img src="img/joseph.png" alt="" class="img-responsive m-auto waypoint" /> -->
+              <div class="team-png-sprite joseph"></div>
               <h6 class="c-g waypoint">Managing Partner Singapore</h6>
               <h3 class="title waypoint">JOSEPH ZIEGLER</h3>
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
@@ -541,14 +552,39 @@
               <p class="waypoint"><b class="c-g">Join us</b> today to grow your career!</p>
               <div class="row">
                 <div class="team-wrapper">
-                  <img src="img/team-10.png" alt="" class="img-team waypoint" id="team-1" />
+                  <div class="img-team" id="team-1">
+                    <div class="img-png-sprite team-1"></div>
+                  </div>
+                  <div class="img-team" id="team-2">
+                    <div class="img-png-sprite team-2"></div>
+                  </div>
+                  <div class="img-team" id="team-3">
+                    <div class="img-png-sprite team-3"></div>
+                  </div>
+                  <div class="img-team" id="team-4">
+                    <div class="img-png-sprite team-4"></div>
+                  </div>
+                  <div class="img-team" id="team-5">
+                    <div class="img-png-sprite team-5"></div>
+                  </div>
+                  <div class="img-team" id="team-6">
+                    <div class="img-png-sprite team-6"></div>
+                  </div>
+                  <div class="img-team" id="team-7">
+                    <div class="img-png-sprite team-7"></div>
+                  </div>
+                  <div class="img-team" id="team-8">
+                    <div class="img-png-sprite team-8"></div>
+                  </div>
+
+                  <!-- <img src="img/team-10.png" alt="" class="img-team waypoint" id="team-1" />
                   <img src="img/team8.png" alt="" class="img-team waypoint" id="team-2" />
                   <img src="img/team-11.png" alt="" class="img-team waypoint" id="team-3" />
                   <img src="img/team2.png" alt="" class="img-team waypoint" id="team-4" />
                   <img src="img/team9.png" alt="" class="img-team waypoint" id="team-5" />
                   <img src="img/team-13.png" alt="" class="img-team waypoint" id="team-6" />
                   <img src="img/team-12.png" alt="" class="img-team waypoint" id="team-7" />
-                  <img src="img/team-14.png" alt="" class="img-team waypoint" id="team-8" />
+                  <img src="img/team-14.png" alt="" class="img-team waypoint" id="team-8" /> -->
                 </div>
               </div>
               <h2 class="align-center heading waypoint">Opportunities</h2>
@@ -746,14 +782,20 @@
       
         <div class="hidden-sm-up">
           <a href="https://www.google.com/maps/place/Vincom+Center+B+Shopping+Mall/@10.7779879,106.7016333,18.1z/data=!4m2!3m1!1s0x31752f47df59b94f:0x6bbcaeb33e29c9f2" target="_blank">
-            <img src="img/address.png" class="img-address waypoint"/>
+            <!-- <img src="img/address.png" class="img-address waypoint"/> -->
+            <div class="img-address">
+              <div id="address"></div>
+            </div>
           </a>
           <!-- <img src="img/map.jpg" class="img-responsive"/> -->
         </div>
         <div class="hidden-xs-down">
           <!-- <img src="img/map2.png" class="img-responsive img-map2 waypoint"/> -->
           <a href="https://www.google.com/maps/place/Vincom+Center+B+Shopping+Mall/@10.7779879,106.7016333,18.1z/data=!4m2!3m1!1s0x31752f47df59b94f:0x6bbcaeb33e29c9f2" target="_blank">
-            <img src="img/address.png" class="img-address waypoint"/>
+            <!-- <img src="img/address.png" class="img-address waypoint"/> -->
+            <div class="img-address">
+              <div id="address"></div>
+            </div>
           </a>
           <!-- <img src="img/gMap.jpg" class="img-responsive img-map2"/> -->
           <div class="map-bg"></div>
