--- a/website/index.html
+++ b/website/index.html
@@ -173,25 +173,25 @@
           </div> -->
           <div class="row">
             <div class="col-sm-6 col-md-3">
-              <div class="square sprite-png sprite-pepole waypoint"></div>
+              <div class="square sprite-pepole waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">10.5</h2>
               <h6 class="waypoint">millions people</h6>
               <p class="text-center">worldwide annually booking flights, hotels and rental cars through a travel website scaled by us.</p>
             </div>
             <div class="col-sm-6 col-md-3">
-              <div class="square sprite-png sprite-visit waypoint"></div>
+              <div class="square sprite-visit waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">398</h2>
               <h6 class="waypoint">thousands unique visitors</h6>
               <p class="text-center">every month in Germany visiting online shops scaled by NFQ.</p>
               </div>
             <div class="col-sm-6 col-md-3">
-              <div class="square sprite-png sprite-startup waypoint"></div>
+              <div class="square sprite-startup waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">+76</h2>
               <h6 class="waypoint">of startups</h6>
               <p class="text-center">in the USA, Europe and Asia benefiting from our scaling</p>
               </div>
             <div class="col-sm-6 col-md-3">
-              <div class="square sprite-png sprite-first waypoint"></div>
+              <div class="square sprite-first waypoint"></div>
               <h2 class="text-center c-g waypoint" style="font-size: 3rem">1</h2>
               <h6 class="waypoint">8 Bit Rockstars</h6>
               <p class="text-center">Vietnam is among the first expansions of NFQ in Asia.</p>
